Fixes whitespaces

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -15,6 +15,14 @@ html {
     height: 100%;
 }
 
+div {
+    white-space: pre;
+}
+
+span {
+    white-space: pre;
+}
+
 .page {
     margin-top: 77px;
 }
